logs/jig.log
Listing '.'...
Listing './bin'...
Compiling './bin/rst2html.py'...
Compiling './bin/rst2html4.py'...
Compiling './bin/rst2html5.py'...
Compiling './bin/rst2latex.py'...
Compiling './bin/rst2man.py'...
Compiling './bin/rst2odt.py'...
Compiling './bin/rst2odt_prepstyles.py'...
Compiling './bin/rst2pseudoxml.py'...
Compiling './bin/rst2s5.py'...
Compiling './bin/rst2xetex.py'...
Compiling './bin/rst2xml.py'...
Compiling './bin/rstpep2html.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GitPython-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/docutils'...
Listing './lib/python3.5/site-packages/docutils/languages'...
Listing './lib/python3.5/site-packages/docutils/parsers'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/directives'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/include'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/languages'...
Listing './lib/python3.5/site-packages/docutils/readers'...
Listing './lib/python3.5/site-packages/docutils/transforms'...
Listing './lib/python3.5/site-packages/docutils/utils'...
Listing './lib/python3.5/site-packages/docutils/utils/math'...
Listing './lib/python3.5/site-packages/docutils/writers'...
Listing './lib/python3.5/site-packages/docutils/writers/html4css1'...
Listing './lib/python3.5/site-packages/docutils/writers/html5_polyglot'...
Listing './lib/python3.5/site-packages/docutils/writers/latex2e'...
Listing './lib/python3.5/site-packages/docutils/writers/odf_odt'...
Listing './lib/python3.5/site-packages/docutils/writers/pep_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/default'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-white'...
Listing './lib/python3.5/site-packages/docutils/writers/xetex'...
Listing './lib/python3.5/site-packages/docutils-0.14.dist-info'...
Listing './lib/python3.5/site-packages/git'...
Compiling './lib/python3.5/site-packages/git/cmd.py'...
***   File "./lib/python3.5/site-packages/git/cmd.py", line 336
    print ' '.join(command)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/git/config.py'...
***   File "./lib/python3.5/site-packages/git/config.py", line 186
    except IOError,e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/git/index'...
Compiling './lib/python3.5/site-packages/git/index/fun.py'...
***   File "./lib/python3.5/site-packages/git/index/fun.py", line 53
    return S_IFREG | 0644 | (mode & 0100)       # blobs with or without executable bit
                        ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/git/objects'...
Compiling './lib/python3.5/site-packages/git/objects/blob.py'...
***   File "./lib/python3.5/site-packages/git/objects/blob.py", line 18
    executable_mode = 0100755
                            ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/git/objects/submodule'...
Compiling './lib/python3.5/site-packages/git/objects/tree.py'...
***   File "./lib/python3.5/site-packages/git/objects/tree.py", line 119
    commit_id = 016     # equals stat.S_IFDIR | stat.S_IFLNK - a directory link
                  ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/git/odict.py'...
***   File "./lib/python3.5/site-packages/git/odict.py", line 614
    raise TypeError, ('pop expected at most 2 arguments, got %s' %
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/git/refs'...
Compiling './lib/python3.5/site-packages/git/refs/head.py'...
***   File "./lib/python3.5/site-packages/git/refs/head.py", line 84
    except GitCommandError, e:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/git/remote.py'...
***   File "./lib/python3.5/site-packages/git/remote.py", line 65
    except GitCommandError,e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/git/repo'...
Compiling './lib/python3.5/site-packages/git/repo/base.py'...
***   File "./lib/python3.5/site-packages/git/repo/base.py", line 654
    os.makedirs(path, 0755)
                         ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/git/test'...
Listing './lib/python3.5/site-packages/git/test/fixtures'...
Listing './lib/python3.5/site-packages/git/test/lib'...
Compiling './lib/python3.5/site-packages/git/test/lib/helper.py'...
***   File "./lib/python3.5/site-packages/git/test/lib/helper.py", line 70
    os.chmod(fullpath, 0777)
                          ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/git/test/test_fun.py'...
***   File "./lib/python3.5/site-packages/git/test/test_fun.py", line 79
    return (sha, S_IFREG | 0644 | executable*0111, name)
                              ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/git/test/test_index.py'...
***   File "./lib/python3.5/site-packages/git/test/test_index.py", line 321
    except CheckoutError, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/git/test/test_repo.py'...
***   File "./lib/python3.5/site-packages/git/test/test_repo.py", line 508
    print "failed on %s" % path_section
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/git/test/test_submodule.py'...
***   File "./lib/python3.5/site-packages/git/test/test_submodule.py", line 31
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/git/util.py'...
***   File "./lib/python3.5/site-packages/git/util.py", line 495
    except OSError,e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gitdb'...
Listing './lib/python3.5/site-packages/gitdb/db'...
Listing './lib/python3.5/site-packages/gitdb/test'...
Listing './lib/python3.5/site-packages/gitdb/utils'...
Listing './lib/python3.5/site-packages/gitdb-0.6.4.egg-info'...
Listing './lib/python3.5/site-packages/jig'...
Listing './lib/python3.5/site-packages/jig/commands'...
Listing './lib/python3.5/site-packages/jig/commands/tests'...
Listing './lib/python3.5/site-packages/jig/data'...
Listing './lib/python3.5/site-packages/jig/data/pre-commits'...
Listing './lib/python3.5/site-packages/jig/gitutils'...
Listing './lib/python3.5/site-packages/jig/gitutils/tests'...
Listing './lib/python3.5/site-packages/jig/packages'...
Listing './lib/python3.5/site-packages/jig/packages/argparse'...
Listing './lib/python3.5/site-packages/jig/plugins'...
Listing './lib/python3.5/site-packages/jig/plugins/tests'...
Listing './lib/python3.5/site-packages/jig/tests'...
Listing './lib/python3.5/site-packages/jig-0.1.11.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smmap'...
Listing './lib/python3.5/site-packages/smmap/test'...
Listing './lib/python3.5/site-packages/smmap-0.9.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
